fix: useless colors

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -36,7 +36,7 @@
  */
 
 /*
- * cosmo colors
+ * Cosmo colors
  */
 
 /*
@@ -10910,7 +10910,7 @@ a.text-dark:focus {
 /* Cursor */
 
 .typed-cursor {
-  color: #494949 !important;
+  color: #292929 !important;
 }
 
 /*
